images/ingress-nginx-controller/tests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
spec:
  ingressClassName: nginx
  rules:
  - host: myservicea.foo.org
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: myservicea
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myserviceb
spec:
  ingressClassName: nginx
  rules:
  - host: myserviceb.foo.org
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: myserviceb
            port: 
              number: 80
---              
apiVersion: v1
kind: Service
metadata:
  name: ingress-myserviceb
spec:
  selector:
    app.kubernetes.io/name: httpbun
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---              
apiVersion: v1
kind: Service
metadata:
  name: ingress-myservicea
spec:
  selector:
    app.kubernetes.io/name: httpbun
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: httpbun
  labels:
        app.kubernetes.io/name: httpbun
spec:
  containers:
  - name: httpbun
    image: registry.k8s.io/ingress-nginx/e2e-test-httpbun:v20230505-v0.0.1
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: 100m
        memory: 90Mi
      limits:
        cpu: 200m
        memory: 180Mi
