images/ingress-nginx-controller/tests/kind.yaml
kind: Cluster
apiVersion: kind.x-k8s.io/v1alpha4
nodes:
- role: control-plane
  labels:
    topology.kubernetes.io/zone: zone-1
  kubeadmConfigPatches:
  - |
    kind: InitConfiguration
    nodeRegistration:
      kubeletExtraArgs:
        node-labels: "ingress-ready=true"
  extraPortMappings:
  - containerPort: 80
    hostPort: 80
    protocol: TCP
  - containerPort: 443
    hostPort: 443
    protocol: TCP    
- role: worker
  labels:
    topology.kubernetes.io/zone: zone-1
- role: worker
  labels:
    topology.kubernetes.io/zone: zone-2
kubeadmConfigPatches:
- |
  kind: ClusterConfiguration
  metadata:
    name: config
  controllerManager:
    extraArgs:
      namespace-sync-period: 10s
      concurrent-deployment-syncs: "30"
